--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -626,6 +626,18 @@ img {
   transform: translate(6px, -7px);
 }
 
+.qualification [data-content] {
+  display: none;
+}
+
+.qualification__active[data-content] {
+  display: block;
+}
+
+.qualification__button.qualification__active {
+  color: var(--first-color);
+}
+
 /*==================== SERVICES ====================*/
 
 .services__container {
