--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -519,36 +519,32 @@ img {
   background-color: var(--first-color);
 }
 
-.skills__html {
-  width: 90%;
-}
-
-.skills__css {
-  width: 60%;
-}
-
 .skills__js {
-  width: 80%;
+  width: 85%;
 }
 
 .skills__react {
-  width: 85%;
+  width: 80%;
+}
+
+.skills__redux {
+  width: 75%;
+}
+
+.skills__java {
+  width: 90%;
 }
 
 .skills__node {
   width: 85%;
 }
 
-.skills__express {
-  width: 70%;
-}
-
-.skills__mongo {
-  width: 70%;
-}
-
-.skills__python {
+.skills__aws {
   width: 60%;
+}
+
+.skills__spring {
+  width: 70%;
 }
 
 .skills__close .skills__list {
